<resources>
    <string name="app_name">TallerUnimag1</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="mensajeError1">Datos Invalidos</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Operaciones">Operaciones</string>
    <string name="dato1">Número 1</string>
    <string name="dato2">Número 2</string>
    <string name="sumar">SUMAR</string>
    <string name="restar">RESTAR</string>
    <string name="multiplicar">Multiplicar</string>

</resources>