<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#8FDF79"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/Operaciones"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:text="@string/dato1"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            tools:text="@string/dato2" />

        <EditText
            android:id="@+id/edtn2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:inputType="number|textPersonName" />

        <Button
            android:id="@+id/btnsumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sumar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnrestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmultiplica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>